--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --branco-principal: #FFFFFF;
     --cinza-secundario: #c0c0c0;
-    --botao-azul: #167bf7;
+    --botao-azul: #e6e348;
     --cor-de-fundo: #00030c;
     --fonte-principal: 'Inter';
     --botao-azul-efeito: #9abbe3;
